Add new features to the existing codebase // Description: This code adds new features to the existing codebase by implementing a new function and updating the main function to utilize it. I added things like: chatrooms, authentication, and user profiles. etc

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+.color{
+  color:hsl(180 100% 25.1%);
+}
+.bg-color{
+  background-color:hsl(180 100% 25.1%);
+}
+
+.text-color{
+  color: hsl(0 0% 45.1%);
+}
