--- a/src/index.css
+++ b/src/index.css
@@ -108,14 +108,14 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-  background: transparent; /* No background */
+  background: transparent; 
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #6b7280; /* Tailwind gray-500 */
+  background-color: rgb(131 56 138); 
   border-radius: 3px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #4b5563; /* Tailwind gray-600 */
+  background-color: rgba(131, 56, 138, 0.849);
 }
